--- a/Remote4Support/Remote4Support.csproj
+++ b/Remote4Support/Remote4Support.csproj
@@ -71,6 +71,12 @@
     <Compile Include="Gui\FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gui\SessionDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gui\SessionDetail.Designer.cs">
+      <DependentUpon>SessionDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gui\SessionTreeView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,8 +91,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\SingletonToolWindowHelper.cs" />
     <EmbeddedResource Include="Gui\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gui\SessionDetail.resx">
+      <DependentUpon>SessionDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Gui\SessionTreeView.resx">
       <DependentUpon>SessionTreeView.cs</DependentUpon>
