--- a/Remote4Support/packages.config
+++ b/Remote4Support/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
+  <package id="ConEmu.Control.WinForms" version="1.0.20160518.0" targetFramework="net45" />
+  <package id="ConEmu.Core" version="17.12.26" targetFramework="net45" />
   <package id="DockPanelSuite" version="3.0.3" targetFramework="net45" />
 </packages>
