--- a/Remote4Support/Remote4Support.csproj
+++ b/Remote4Support/Remote4Support.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Remote4Support.cs" />
     <Compile Include="Utils\SingletonToolWindowHelper.cs" />
     <EmbeddedResource Include="Gui\FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
